CSS fixes for create button overflowing into footer

--- a/src/components/ProfilePage/ProfilePage.css
+++ b/src/components/ProfilePage/ProfilePage.css
@@ -150,6 +150,8 @@
 .course-card-cover-image {
     width: 10vw;
     height: 10vh;
+    object-fit: cover;
+    object-position: center center;
     border-radius: 25px;
 
 }
